--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,9 @@
   "description": "Track success in every form.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "webpack serve --mode development",
+    "build": "webpack --mode production"
   },
   "author": "Tyler Meyer",
   "license": "ISC",
